# srx

./: .vscode-ctags  多设备多画面同步方案-20230818.xmind
build_qt/: .qmake.stash  Makefile  ffmpeg_qt  moc_cplaywidget.cpp  moc_jsonconsole.cpp  moc_predefs.h  moc_s_tcpserver.cpp  moc_simplevideoplayer.cpp  moc_widget.cpp  moc_xvideowidget.cpp  ui_widget.h
dev_syn/: .vscode-ctags  1.md  CMakeLists.txt  使用手册.md  多设备多画面同步方案-20230818.xmind  流程图.dio
dev_syn/config/: sys_config.json
dev_syn/inc/: cmd.h  common.h  dev_time.h  h264.h  sys_config.h  time.h
dev_syn/src/: cmd.c  dev_time.c  h264.c  link_queue.c  main.c  send_h264.cpp  sys_config.c  time.c
dev_syn/src/ffmpeg_test_pc/: sendpacket.h
dev_syn/src/ffmpeg_test_pc/rtp/: RTPProcessor.cpp  RTPProcessor.h  RTPRecvProcessor.cpp  RTPSendProcessor.cpp
dev_syn/test/: a.out  main_recv_h264.c  main_recv_test.c  main_send_h264.c  recv.out  test.h264  v4l2-ctl命令.md  v4l2.c  v4l2_capture  v4l2_test_mplane.c
dev_syn/utils/: tool.c  tool.h
recv_code/: .vscode-ctags  CMakeLists.txt
recv_code/config/: sys_config.json
recv_code/doc/: task.md
recv_code/inc/: cmd_recv.h  h264_recv.h  sys_config.h  time_recv.h
recv_code/src/: cmd_recv.c  h264_recv.c  main.c  sys_config.c  time_recv.c
recv_code/utils/: tool.c  tool.h
reve_code/: cmd_reve.c  udp_server.c
rtp_dev_syn/dev_syn/: CMakeLists.txt
rtp_dev_syn/dev_syn/inc/: cmd.h  dev_time.h  link_queue.h  sys_config.h
rtp_dev_syn/dev_syn/src/: cmd.c  h264.c  main.c  sys_config.c
rtp_dev_syn/dev_syn/test/: main_recv_h264.c  main_send_h264.c  recv.out  v4l2-ctl命令.md
rtp_dev_syn/dev_syn/utils/: tool.c  tool.h
rtp_dev_syn/rtp/: H2645ParseSPS.cpp  H2645ParseSPS.h  ParseSPS.cpp  ParseSPS.h  RTPProcessor.cpp  RTPRecvProcessor.cpp  RTPRecvProcessor.h  RTPSendProcessor.cpp  RTPSendProcessor.h
script/: preview_theme.zsh
send_code/: .vscode-ctags  CMakeLists.txt  Makefile
send_code/inc/cmd_inc/: cmd_send.h  srx.h
send_code/inc/h264_inc/: h264_send.h  mpi_enc_utils.h  rc_hal.h
send_code/inc/time_inc/: time_send.h
send_code/src/: main.c
send_code/src/cmd_src/: cmd_send.c
send_code/src/h264_src/: dictionary.c  h264_send.c  mpp_enc_roi_utils.c
send_code/src/time_src/: time_send.c
send_code/utils/: tool.c  tool.h
train/: .Module.symvers.cmd  .hello.ko.cmd  .hello.mod.cmd  .hello.mod.o.cmd  .hello.o.cmd  .modules.order.cmd  .vscode-ctags  spi编译测试.md
train/app/: gpio_test_app  gpio_test_app.c
train/drivers/: .Module.symvers.cmd  .hello.ko.cmd  .hello.mod.cmd  .hello.mod.o.cmd  .hello.o.cmd  .modules.order.cmd
train/drivers/GPIO/: .Module.symvers.cmd  .gpio_test.ko.cmd  .gpio_test.mod.cmd  .gpio_test.mod.o.cmd  .gpio_test.o.cmd  .modules.order.cmd  Makefile  gpio_test.c  gpio_test.ko  gpio_test.mod  gpio测试.md  modules.order
train/drivers/globalmem/: golbalmem.c
train/drivers/hello/: .Module.symvers.cmd  .hello.ko.cmd  .hello.mod.cmd  .hello.mod.o.cmd  .hello.o.cmd  .modules.order.cmd  Makefile  hello.c  hello.ko  hello.mod.c  modules.order
train/drivers/param/: .Module.symvers.cmd  .modules.order.cmd  .param_test.ko.cmd  .param_test.mod.cmd  .param_test.mod.o.cmd  .param_test.o.cmd  param_test.c  param_test.ko  param_test.mod  param_test.mod.c
train/drivers/symbol/: .Module.symvers.cmd  .demo_a.ko.cmd  .demo_a.mod.cmd  .demo_a.mod.o.cmd  .demo_a.o.cmd  .demo_a.o.d  .demo_b.ko.cmd  .demo_b.mod.cmd  .demo_b.mod.o.cmd  .demo_b.o.cmd  .modules.order.cmd  Makefile  Module.symvers  demo_a.c  demo_a.ko  demo_a.mod.c  demo_b.c  demo_b.ko  demo_b.mod.c  modules copy.order  modules.order
